--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
 					</div>
 
 					<div class="col-10">
-						<a href="assets/img/Sarmistha_Academic_CV (10).pdf" class="link-dark" target="_blank"
-							data-en="CV [Updated 10/2024]"></a>
+						<!-- <a href="assets/img/cv_fatema.pdf" class="link-dark" target="_blank" data-en="CV [Updated 10/2024]"></a> -->
+						<a href="#" class="link-dark" data-en="CV [Updated 12/2024]"></a>
 					</div>
 				</div>
 
@@ -154,22 +154,17 @@
 					<div class="col-1">
 						<i class="fa-regular fa-envelope project-color" aria-hidden="true"></i>
 					</div>
-
 					<div class="col-10">
 						<a href="mailto:fatemakhankgsc@gmail.com" class="link-dark">email</a>
 					</div>
 				</div>
-
-				<!-- <a class="quickLink" href="https://scholar.google.com/citations?user=U_iQbMIAAAAJ&hl=en">
-						<img class='scholar' style="height:25px" src="/assets/img/googlescholar.png"></img>
-					  </a> -->
 				<div class="row mb-2">
 					<div class="col-1">
 						<i class="fa-brands fa-google project-color" aria-hidden="true"></i>
 					</div>
 
 					<div class="col-10">
-						<a href="https://scholar.google.com/citations?user=TNDI1mkAAAAJ&amp;hl=en" class="link-dark"
+						<a href="https://scholar.google.com/citations?user=GdUR4CcAAAAJ&hl=en" class="link-dark"
 							target="_blank">GoogleScholar</a>
 					</div>
 				</div>
@@ -180,33 +175,10 @@
 					</div>
 
 					<div class="col-10">
-						<a href="https://www.linkedin.com/in/fatema-khan-jucse/" class="link-dark"
+						<a href="https://www.linkedin.com/in/fatema-khan-jucse" class="link-dark"
 							target="_blank">LinkedIn</a>
 					</div>
 				</div>
-
-				<div class="row mb-2">
-					<div class="col-1">
-						<i class="fa-brands fa-twitter project-color" aria-hidden="true"></i>
-					</div>
-
-					<div class="col-10">
-						<a href="#" class="link-dark" target="_blank">Twitter</a>
-					</div>
-				</div>
-
-				<!-- <div class="row mb-2">
-					<div class="col-1">
-						<i class="fab fa-github" aria-hidden="true"></i>
-					</div>
-
-					<div class="col-10">
-						<a href="https://github.com/Fatema31" class="link-dark" target="_blank">GitHub</a>
-					</div>
-				</div> -->
-
-
-
 			</div>
 
 			<!-- About Me -->
@@ -214,109 +186,35 @@
 				<div class="container">
 					<div class="row language">
 						<h3 class="mt-2 project-color">About Me</h3>
-
-						<h4 id="researchinterestsH4" class="mt-2" data-es="Áreas de Investigación"
-							data-en="Research Interests">
-						</h4>
-
-						<p class="mt-1"
-							data-en="I am a second-year PhD student in the <a href='https://lass.cs.umass.edu/'>Laboratory for Advanced Software Systems (LASS)</a> at the University of Massachusetts Amherst, working under the guidance of <a href='https://people.cs.umass.edu/~shenoy/'>Dr. Prashant Shenoy</a>. My research broadly focues on: ">
-
+						<p>
+							I am Fatema Khan, currently working as a Lecturer in the Department of Computer Science and
+							Engineering (CSE) at University of Liberal Arts Bangladesh (ULAB). Previously, I worked as a
+							Lecturer in the department of CSE at Green University of Bangladesh for 1 year. I pursued my
+							M.Sc and B.Sc. in Computer Science and Engineering from Jahangirnagar University,
+							Bangladesh.<br><br>
+							My research interest lies in the broad spectrum of:
 						</p>
-						<ul class=" mt-1">
-							<li>Developing privacy-preserving mobile and wearable sensing systems</li>
-							<li>Advancing system designs for Mixed Reality applications with a focus on resource
-								efficiency
-								and performance optimization</li>
-							<li>Creating human-centered ubiquitous computing solutions that bridge technical innovations
-								with user needs, particularly in health and accessibility applications</li>
-
+						<ul class="mt-2">
+							<li class="abme-honors-bullet mt-2">Artificial Intelligence</li>
+							<li class="abme-honors-bullet mt-2">Machine Learning</li>
+							<li class="abme-honors-bullet mt-2">Natural Language Processing</li>
+							<li class="abme-honors-bullet mt-2">Computer Vision</li>
+							<li class="abme-honors-bullet mt-2">Human Computer Interaction</li>
 						</ul>
-						My research methodology combines systems and human-centered approaches, employing both
-						quantitative performance analysis and user studies to develop solutions that are technically
-						robust and practically deployable.
-						<p></p>
-
-						Outside of research, I actively contribute to establishing diversity and inclusion programs, PhD
-						support programs and grad social events to overcome stereotype bias and make tech more diverse.
-						In my free time, I enjoy solo backpacking, hiking, cycling, and playing piano.
-
-						<p></p>
 						<h4 id="honors-and-awards" class="mt-2" data-es="Premios y Distinciones"
 							data-en="Honors and Awards"></h4>
 
 						<ul class="mt-1">
 							<li class="abme-honors-bullet mt-2">
-
-								<strong><span
-										data-en=" 🥇 Awarded with Google CSRMP's scholar for 12 weeks under the supervision of google researchers."></span></strong>
-								-Oct, 2023
-
-
+								Best Paper Award: IEEE Region 10 Symposium (Tensymp) 2020
 							</li>
 							<li class="abme-honors-bullet mt-2">
-
-								<strong><span
-										data-en=" 🥇 NST fellowship grant ($600) to facilitate undergrad thesis (top 0.01%)."></span></strong>
-								-June, 2022
-
-
-							</li>
-
-
-
-
-							<li class="abme-honors-bullet mt-2">
-								<strong><span
-										data-en="Nomination by Umass Amherst Grad College for Spaulding-Smith Fellowship 2023"></span></strong>
-								<span></span>
-
-
-								- Mar, 2023
-							</li>
-
-
-							<li class="abme-honors-bullet mt-2">
-								<strong><span
-										data-en=" 🥇 National Finalist at Cloud Computing Catagory in Bangabandhu National Skills Competition."></span></strong>
-								-Dec, 2021
-
-
-							</li>
-
-							<li class="abme-honors-bullet mt-2">
-								<strong><span
-										data-en="🥇 Ranked top 10% out of 8000+ participants in Machine learning &amp; Data Science catagories of GirlScript Winter of Contributing 2021."></span></strong>
-								-Sep, 2021
-
-
-							</li>
-
-
-							<li class="abme-honors-bullet mt-2">
-								<strong><span
-										data-en="🥇 Ranked 6th place in Ada Lovelace Datathon 2021 hosted by HerWill."></span></strong>
-
-
-
+								National Science and Technology (NST) Fellowship: Awarded by Ministry of Information and
+								Communication Technology, Bangladesh to facilitate M.Sc. Thesis dissertation. (2022)
 							</li>
 							<li class="abme-honors-bullet mt-2">
-								<strong><span
-										data-en=" 🥇 Awarded fellowship among 2000+ candidates from 75 countries to attend International Student Week Ilmenau, Germany."></span></strong>
-
-
-
-							</li>
-							<li class="abme-honors-bullet mt-2">
-								<strong><span
-										data-en="🥇 Best poster paper award in International Workshop on Computer Vision and Intelligent Systems."></span></strong>
-
-
-
-							</li>
-							<li class="abme-honors-bullet mt-2">
-								<strong><span
-										data-en=" 🥇 Ranked top 9% out of 105+ teams in National Girls Programming Contest 2018"></span></strong>
+								Yearly Merit Academic Scholarship for academic excellence awarded by Jahangirnagar
+								University from session 2017 to 2022.
 							</li>
 						</ul>
 					</div>
@@ -332,46 +230,59 @@
 							<div class="card-body d-flex align-items-center">
 								<div>
 									<p class="mb-1">
-										<strong>Tanjim Taharat Aurpa, Fatema Khan, Md Musfique Anwar</strong>, -
-										<a href="https://ieeexplore.ieee.org/document/9230994" target="_blank"
-											class="text-decoration-none">Conference Proceedings (Published:
-											1)</a>,
-									</p>
-									<p class="mb-0">Discovering and Tracking Query Oriented Topical Clusters in Online
+										Tanjim Taharat Aurpa, <strong>Fatema Khan, </strong>Md Musfique Anwar.
+									    Discovering and Tracking Query Oriented Topical Clusters in Online
 										Social
 										Networks. 2020 IEEE Region 10 Symposium (TENSYMP). June, 2020. (Best Paper
-										Award) (Indexed by Scopus) |
+										Award)|
 										<a href="https://ieeexplore.ieee.org/document/9230994"
 											target="_blank">[paper]</a>
 									</p>
 								</div>
 							</div>
 						</div>
+					</div>
+					<h3 class="mt-2 project-color">Publications (Under Review)</h3>
+					<div class="row">
 						<!-- Second Card -->
 						<div class="card mb-3 shadow-sm">
 							<div class="card-body d-flex align-items-center">
 								<div>
 									<p class="mb-1">
-										<strong><u>Fatema Khan</u>, Md. Imdadul Islam, Sarwar Jahan</strong>, -
-										<a href="#" class="text-decoration-none">Journal Articles (Under review: 1)</a>,
-									</p>
-									<p class="mb-0">Enhancing Classification Robustness: Stability Analysis of Fuzzy and
+										<strong>Fatema Khan</strong>, Md. Imdadul Islam, Sarwar Jahan.
+									Enhancing Classification Robustness: Stability Analysis of Fuzzy and
 										Shannon Entropy of Image under Noisy Environment. Journal of Visual
-										Communication and Image Representation. (Impact Factor – 2.6) | [Under Review]
+										Communication and Image Representation. [Under Review]
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="card mb-3 shadow-sm">
+							<div class="card-body d-flex align-items-center">
+								<div>
+									<p class="mb-1">
+										Tanjim Taharat Aurpa, Farzana Akter, Md. Mehedi Hasan, Shakil Ahmed, Shifat Ara Rafiq, and <strong>Fatema Khan.</strong> 
+										Multi-BERT Ensemble Approach for the Recognition of Bangla Medical Entity. Submitted to the ACM Transactions on Asian and Low-Resource Language Information Processing. | [Under Review]
 									</p>
 								</div>
 							</div>
 						</div>
 					</div>
-					<h3 class="mt-2 project-color">Publications</h3>
+					<h3 class="mt-2 project-color">POSTER PRESENTATION</h3>
 					<div class="row">
-						Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-						the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
-						of type and scrambled it to make a type specimen book. It has survived not only five centuries,
-						but also the leap into electronic typesetting, remaining essentially unchanged. It was
-						popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
-						and more recently with desktop publishing software like Aldus PageMaker including versions of
-						Lorem Ipsum.
+						<div class="card mb-3 shadow-sm">
+							<div class="card-body d-flex align-items-center">
+								<div>
+									<p class="mb-1">
+										<strong>Fatema Khan</strong>, Tanjim Taharat Aurpa, Md Musfique Anwar.
+									</p>
+									<p class="mb-0"><a target="_blank" href="assets/project/NSysS_Student_Poster_Template.pptx"> Discovering and Tracking Query Oriented Topical Clusters in Online
+										Social Networks</a>. 6th International Conference on Networking, Systems and
+										Security (NSysS). December,2019, BUET, Bangladesh.
+									</p>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -498,7 +409,7 @@
 									<p class="mb-0"><strong>Start date:</strong> 28.10.19</p>
 									<p><strong>Date of completion:</strong> 23.11.19</p>
 								</div>
-								<a href="project-6.html" style="margin-bottom: 22px;" class="btn btn-primary">More
+								<a href="project-7.html" style="margin-bottom: 22px;" class="btn btn-primary">More
 									details</a>
 							</div>
 						</div>
@@ -525,41 +436,56 @@
 						</thead>
 						<tbody>
 							<tr>
-								<td style="border: 1px solid black; padding: 8px;">CSE-355</td>
-								<td style="border: 1px solid black; padding: 8px;">Software Engineering</td>
-								<td style="border: 1px solid black; padding: 8px;">3rd Year 2nd Semester, 2019
-									(Jahangirnagar University)</td>
+								<td style="border: 1px solid black; padding: 8px;">CSE3200</td>
+								<td style="border: 1px solid black; padding: 8px;">Design Project II</td>
+								<td style="border: 1px solid black; padding: 8px;">Fall 2024 (University of Liberal Arts Bangladesh)</td>
 							</tr>
 							<tr>
-								<td style="border: 1px solid black; padding: 8px;">CSE-253</td>
-								<td style="border: 1px solid black; padding: 8px;">Algorithm Analysis and Design</td>
-								<td style="border: 1px solid black; padding: 8px;">2nd Year 2nd Semester, 2019
-									(Jahangirnagar University)</td>
+								<td style="border: 1px solid black; padding: 8px;">CSE2103</td>
+								<td style="border: 1px solid black; padding: 8px;">Object Oriented Programming</td>
+								<td style="border: 1px solid black; padding: 8px;">Fall 2024 (University of Liberal Arts Bangladesh)</td>
 							</tr>
 							<tr>
-								<td style="border: 1px solid black; padding: 8px;">COS10005</td>
-								<td style="border: 1px solid black; padding: 8px;">Web Development</td>
-								<td style="border: 1px solid black; padding: 8px;">Semester 1, 2018 (Swinburne
-									University of Technology, Australia)</td>
+								<td style="border: 1px solid black; padding: 8px;">CSE2104</td>
+								<td style="border: 1px solid black; padding: 8px;">Object Oriented Programming</td>
+								<td style="border: 1px solid black; padding: 8px;">Fall 2024 (University of Liberal Arts Bangladesh)</td>
 							</tr>
 							<tr>
-								<td style="border: 1px solid black; padding: 8px;">SWE40003</td>
-								<td style="border: 1px solid black; padding: 8px;">Enterprise Development</td>
-								<td style="border: 1px solid black; padding: 8px;">Semester 1, 2016 (Swinburne
-									University of Technology, Australia)</td>
+								<td style="border: 1px solid black; padding: 8px;">CSE1201</td>
+								<td style="border: 1px solid black; padding: 8px;">Structured Programming </td>
+								<td style="border: 1px solid black; padding: 8px;">Summer 2024, Spring 2024 (University of Liberal Arts Bangladesh)</td>
 							</tr>
 							<tr>
-								<td style="border: 1px solid black; padding: 8px;">COS10004</td>
-								<td style="border: 1px solid black; padding: 8px;">Computer System</td>
-								<td style="border: 1px solid black; padding: 8px;">Semester 2, 2017 (Swinburne
-									University of Technology, Australia)</td>
+								<td style="border: 1px solid black; padding: 8px;">CSE1202</td>
+								<td style="border: 1px solid black; padding: 8px;">Structured Programming Lab</td>
+								<td style="border: 1px solid black; padding: 8px;">Summer 2024, Spring 2024 (University of Liberal Arts Bangladesh)</td>
 							</tr>
 							<tr>
-								<td style="border: 1px solid black; padding: 8px;">CPS10004</td>
-								<td style="border: 1px solid black; padding: 8px;">Fundamentals of Data Management</td>
-								<td style="border: 1px solid black; padding: 8px;">2016-17 (Swinburne University of
-									Technology, Australia)</td>
+								<td style="border: 1px solid black; padding: 8px;">CSE1301</td>
+								<td style="border: 1px solid black; padding: 8px;">Data Structures</td>
+								<td style="border: 1px solid black; padding: 8px;">Summer 2024, Spring 2024 (University of Liberal Arts Bangladesh)</td>
 							</tr>
+							<tr>
+								<td style="border: 1px solid black; padding: 8px;">CSE1302</td>
+								<td style="border: 1px solid black; padding: 8px;">Data Structures Lab</td>
+								<td style="border: 1px solid black; padding: 8px;">Summer 2024, Spring 2024 (University of Liberal Arts Bangladesh)</td>
+							</tr>
+							<tr>
+								<td style="border: 1px solid black; padding: 8px;">CSE2201</td>
+								<td style="border: 1px solid black; padding: 8px;">Algrithms</td>
+								<td style="border: 1px solid black; padding: 8px;">Summer 2024, Spring 2024 (University of Liberal Arts Bangladesh)</td>
+							</tr>
+							<tr>
+								<td style="border: 1px solid black; padding: 8px;">CSE2202</td>
+								<td style="border: 1px solid black; padding: 8px;">Algrithms Lab</td>
+								<td style="border: 1px solid black; padding: 8px;">Summer 2024, Spring 2024 (University of Liberal Arts Bangladesh)</td>
+							</tr>
+							<tr>
+								<td style="border: 1px solid black; padding: 8px;">CSE2101</td>
+								<td style="border: 1px solid black; padding: 8px;">Digital Logic Design</td>
+								<td style="border: 1px solid black; padding: 8px;">Summer 2024, Spring 2024 (University of Liberal Arts Bangladesh)</td>
+							</tr>
+							
 						</tbody>
 					</table>
 
@@ -571,34 +497,12 @@
 				<div class="container language">
 					<h3 class="mt-2 project-color">Work Experience</h3>
 					<div class="experience">
-						<h5>Workera, Palo Alto, California, United States</h5>
-						<span>- Senior Assessment Developer (January 2023 – Present)</span>
-						<ul class="mt-3">
-							<li><i class="bi bi-check-circle-fill check-icon"></i>Serve as the Primary Subject Matter
-								Expert developing assessments for Generative AI (tech and non-tech), Diffusion Models,
-								Large Language Models, and others.</li>
-							<li><i class="bi bi-check-circle-fill check-icon"></i>Engineer prompts to integrate LLMs
-								(ChatGPT, Bing, Claude, Bing Chat) into the assessment development pipeline.</li>
-							<li><i class="bi bi-check-circle-fill check-icon"></i>Implemented an adaptive time
-								allocation system for the Workera GOAT™ (Generative Ontology & Authoring Tool).</li>
-						</ul>
+						<h5>University of Liberal Arts Bangladesh</h5>
+						<span>- Lecturer, Department of Computer Science and Engineering (February 2021 – January 2023)</span>
 					</div>
-
 					<div class="experience">
-						<h5>Workera, Palo Alto, California, United States</h5>
-						<span>- Assessment Developer (February 2021 – January 2023)</span>
-						<ul class="mt-3">
-							<li><i class="bi bi-check-circle-fill check-icon"></i>Developed assessments and learning
-								plans as the Primary Subject Matter Expert for Natural Language Processing, Computer
-								Vision, Automatic Speech Recognition, TensorFlow, and PyTorch. Collaborated on MLOps,
-								Responsible AI, AI Communication, Digital Literacy, Data Analytics, and Web
-								Applications.</li>
-							<li><i class="bi bi-check-circle-fill check-icon"></i>Led a Role Delineation Study as a
-								Committee Co-Chair and an SME to align domains with evolving industry roles.</li>
-							<li><i class="bi bi-check-circle-fill check-icon"></i>Partnered on cross-departmental
-								projects focusing on score calibration, skills alignment, learning pathway
-								standardization, and beta testing for Computer Adaptive Tests (CATs).</li>
-						</ul>
+						<h5>Green University of Bangladesh </h5>
+						<span>- Lecturer, Department of Computer Science and Engineering (September 2022 – September 2023)</span>
 					</div>
 				</div>
 			</div>
