--- a/project-1.html
+++ b/project-1.html
@@ -72,26 +72,46 @@
 						using NLP models" data-en="Sentiment Analysis of Amazon Magazine Reviews 
 							using NLP modelsV">
 						</h3>
-						<h3 class="text-center project-color">Overview</h3>
+						<h3 class="text-center project-color">Objective</h3>
 						<p class="project-overview">
-							This project involves the analysis of customer sentiments in Amazon
-							magazine reviews obtained from a Kaggle dataset to classify sentiments as
-							positive, negative, or neutral by comparing the performance of various NLP
-							models. The study aims to identify the most accurate approach for
-							sentiment classification. The methodology involved cleaning and
-							preprocessing the text data to remove noise, tokenizing it into meaningful
-							units, and encoding sentiment labels into numerical form. The models are
-							trained using fine-tuned hyperparameters. Performance evaluation test
-							data shows that BERT outperforms other models like Bi-LSTM, LSTM, and
-							RNN. BERT also demonstrates consistent performance over ten epochs.
-							This methodology can be used for sentiment analysis tasks in various
-							domains, offering a practical solution for businesses to understand and act
-							on customer opinions at scale
+							The aim this project was to conduct a comprehensive analysis of customer sentiments in
+							Amazon magazine reviews, focusing on classifying sentiments as positive, negative, or
+							neutral and evaluating the performance of various Natural Language Processing (NLP) models.
+							The study was driven by the goal of identifying the most effective and accurate approach for
+							sentiment classification, which holds significant implications for understanding customer
+							feedback at scale.
 						</p>
-						<h3 class="text-center project-color">Method </h3>
-						<img src="assets/project/project-1-1.jpg" alt="">
+						<h3 class="text-center project-color">Methodology </h3>
+						<p class="project-overview">
+							The methodology adopted for this project involved several critical steps, starting with data
+							preprocessing (dataset was obtained from Kaggle). This included cleaning the raw data to
+							remove noise, tokenizing the text into meaningful units, and encoding sentiment labels into
+							numerical formats. After pre-processing, multiple NLP models (BERT, Bi-LSTM, LSTM, and RNN)
+							were trained using fine-tuned hyperparameters, with a focus on optimizing their performance
+							for the sentiment classification task.
+						</p>
+
+						<img src="assets/project/pro-1-1.png" alt=""><br>
+						<img src="assets/project/pro-2-1.jpeg" alt="">
 						<h3 class="text-center project-color">Result </h3>
-						<img src="assets/project/project-1-1.jpg" alt="">
+						<p class="project-overview">
+							The results of the performance evaluation on test data highlighted the superiority of the
+							BERT model over other approaches such as Bi-LSTM, LSTM, and RNN. BERT not only achieved
+							higher accuracy but also exhibited remarkable consistency across ten epochs of training,
+							underscoring its robustness and reliability in handling complex sentiment classification
+							tasks.
+						</p>
+						<img src="assets/project/pro-3-1.jpeg" alt=""><br>
+						<img src="assets/project/pro-4-1.jpeg" alt=""><br>
+						<p class="project-overview">
+							The findings of this study underscore the value of BERT as a state-of-the-art NLP model for
+							sentiment analysis, providing both accuracy and reliability in extracting insights from
+							textual data. Additionally, the methodology employed offers a scalable and practical
+							framework that can be adapted for sentiment analysis across diverse domains. This has
+							significant implications for businesses seeking to interpret customer opinions efficiently,
+							enabling data-driven decision-making to improve products, services, and overall customer
+							satisfaction.
+						</p>
 					</div>
 				</div>
 			</div>
