--- a/project-2.html
+++ b/project-2.html
@@ -74,26 +74,21 @@
 						</h3>
 						<h3 class="text-center project-color">Overview</h3>
 						<p class="project-overview">
-							A real-time traffic data collection and monitoring system is developed to facilitate the
-							implementation of smart cities in
-							developing countries like Bangladesh using a vision-based approach.
-							In this work, various types of vehicle images such as cars, buses, trucks, motorcycles, and
-							and three-wheelers are captured
-							from different roads of Dhaka city. Using Roboflow, each image is annotated to identify and
-							label the different types of
-							vehicles. Dataset is split into 80:20 training-testing set ratio. YOLOv8 model is trained
-							utilizing Darknet framework with
-							iterative optimization to recognize that five distinct vehicle types. A track algorithm is
-							used to assign unique IDs to detected
-							objects and monitoring their movement across frames using Euclidean distance. Speed
-							calculation is performed by analyzing
-							the movement of vehicles between predefined lines on the video frame. Once each frame of a
-							video is processed by the
-							system, it writes the collected data to a csv file. The CSV file is initialized with the
-							appropriate headers for each type of
-							vehicles (such as ’Timestamp’, ’Car Up’, ’Car Down’, etc.). The system iteratively updates
-							the counts of vehicles and average
-							speed at regular intervals, typically every 10 seconds.
+							A real-time traffic data collection and monitoring system is developed using a vision-based
+							approach to facilitate the implementation of smart cities in developing countries like
+							Bangladesh.
+							In this work, various types of vehicle images, such as cars, buses, trucks, motorcycles, and
+							three-wheelers, are captured from different roads of Dhaka city. Using Roboflow, each image
+							is annotated to identify and label the different types of vehicles. The dataset is split
+							into an 80:20 training-testing set ratio. The YOLOv8 model is trained with iterative
+							optimization to recognize five distinct vehicle types. A tracking algorithm is used to
+							assign unique IDs to detected objects and monitor their movement across frames using
+							Euclidean distance. Speed calculation is performed by analyzing the movement of vehicles
+							between predefined lines on the video frame. Once the system processes each frame of a
+							video, the collected data is written in a CSV file. The CSV file is initialized with the
+							appropriate headers for each type of vehicle (such as Timestamp, Car Up, Car Down, etc.).
+							The system iteratively updates the counts of vehicles and average speed at regular
+							intervals, typically every 10 seconds.
 						</p>
 						<p class="project-overview">
 							The CSV file can be served as a valuable resource for traffic monitoring, trend analysis,
@@ -105,14 +100,11 @@
 							visualization, enhancing the versatility and usability of the system’s output.
 						</p>
 						<h3 class="text-center project-color">Method </h3>
-						<img src="assets/project/project-2-1.jpg" alt=""><br/>
-						<img src="assets/project/project-2-2.jpg" alt=""><br/>
-						<img src="assets/project/project-2-4.jpg" alt=""><br/>
-						<img src="assets/project/project-2-3.jpg" alt="">
+						<img src="assets/project/project-2-1.jpg" alt=""><br /><br />
 						<h3 class="text-center project-color">Result </h3>
-						<img src="assets/project/project-2-1.jpg" alt=""><br/>
-						<img src="assets/project/project-2-2.jpg" alt=""><br/>
-						<img src="assets/project/project-2-4.jpg" alt=""><br/>
+						<img src="assets/project/pro-1-2.jpeg" alt=""><br /><br />
+						<img src="assets/project/project-2-4.jpg" alt=""><br /><br />
+						<img src="assets/project/project-2-2.jpg" alt=""><br /><br />
 						<img src="assets/project/project-2-3.jpg" alt="">
 					</div>
 				</div>
