--- a/project-3.html
+++ b/project-3.html
@@ -72,62 +72,47 @@
 						Environment" data-en="Enhancing Classification Robustness: Stability Analysis of Fuzzy and Shannon Entropy of Image under Noisy 
 							Environment">
 						</h3>
-						<h3 class="text-center project-color">Overview</h3>
+						<h3 class="text-center project-color">Objective</h3>
 						<p class="project-overview">
 							Considering the ubiquity of digital images and their noise issues during acquisition, this
-							study aims to explores the
-							concepts of Fuzzy entropy and Shannon entropy as potential features to enhance image
-							recognition in noisy
-							conditions.
-						</p>
-						<p class="project-overview">
-							To obtain this goal: A formulated algorithm is used to determine fuzzy entropy, its maximum
-							value varying six parameters for
-							all the input images. Shannon entropy is calculated from grayscale image directly. Then the
-							impact of Additive White
-							Gaussian Noise (AWGN) on obtained maximum fuzzy and Shannon entropy is observed varying SNR
-							using
-							another algorithm. Second stage of this research involves in combining the most stable
-							feature acquired from the
-							analysis with MLs to classify image sets and comparing their performance with CNN and LSTM
-							under noisy
-							environment.
-						</p>
-						<p class="project-overview">
-							From the analysis, fuzzy entropy is found more stable against SNR. Again, fuzzy entropy
-							parameters combined
-							with MLs classifiers show better stability of accuracy with variation of SNR compared to CNN
-							and LSTM where images were
-							applied directly.
-						</p>
-						<p class="project-overview">
-							This study, proves the effectiveness of fuzzy entropy as a feature. Future of this work
-							includes: combine the ‘fuzzy
-							entropy vector’ with other features like SURF, SIFT, HOG, DWT parameters etc., to observe
-							any improvement of
-							image recognition, matching, and reconstruction within short process time compared to deep
-							learning NN. Again,
-							several MLs under the ‘feature vector of fuzzy entropy’ will be combined to improve the
-							accuracy of detection and
-							the same technique will also be used on other two multimedia data: audio and video.
+							study aims to explores the concepts of Fuzzy entropy and Shannon entropy as potential
+							features to enhance image recognition in noisy conditions.
 						</p>
 
-						<h3 class="text-center project-color">Method </h3>
+
+						<h3 class="text-center project-color">Methodology </h3>
+						<p class="project-overview">
+							To obtain this goal, a formulated algorithm was used to determine fuzzy entropy and its
+							maximum value varying six membership function parameters for all the input images. Shannon
+							entropy was calculated from grayscale image directly. Then the impact of Additive White
+							Gaussian Noise (AWGN) on obtained maximum fuzzy and Shannon entropy was observed varying SNR
+							using another algorithm. Second stage of this research involved in combining the most stable
+							feature acquired from the analysis with MLs (Linear Discriminant Analysis (LDA), Naive Bayes
+							(NB), and Decision Tree (DT) ) to classify image sets and comparing their performance with
+							deep learning algorithms (CNN and LSTM) under noisy environment.
+						</p><br /><br />
 						<img src="assets/project/project-3-1.jpg" alt=""><br />
-						<img src="assets/project/project-3-2.jpg" alt=""><br />
-						<img src="assets/project/project-3-3.jpg" alt=""><br />
-						<img src="assets/project/project-3-4.jpg" alt=""><br />
-						<img src="assets/project/project-3-5.jpg" alt=""><br />
-						<img src="assets/project/project-3-6.jpg" alt=""><br />
-						<img src="assets/project/project-3-7.jpg" alt=""><br />
 						<h3 class="text-center project-color">Result </h3>
-						<img src="assets/project/project-3-1.jpg" alt=""><br />
-						<img src="assets/project/project-3-2.jpg" alt=""><br />
-						<img src="assets/project/project-3-3.jpg" alt=""><br />
-						<img src="assets/project/project-3-4.jpg" alt=""><br />
-						<img src="assets/project/project-3-5.jpg" alt=""><br />
-						<img src="assets/project/project-3-6.jpg" alt=""><br />
-						<img src="assets/project/project-3-7.jpg" alt=""><br />
+						<p class="project-overview">
+							From the first stage analysis, fuzzy entropy was found more stable against SNR. The second
+							stage result showed fuzzy entropy parameters combined with MLs classifiers showed better
+							stability of accuracy with variation of SNR compared to CNN and LSTM where images were
+							applied directly.
+						</p><br /><br />
+						<img src="assets/project/project-3-2.jpg" alt=""><br /><br />
+						<img src="assets/project/project-3-3.jpg" alt=""><br /><br />
+						<img src="assets/project/project-3-5.jpg" alt=""><br /><br />
+						<img src="assets/project/project-3-4.jpg" alt=""><br /><br />
+						<!-- <img src="assets/project/project-3-7.jpg" alt=""><br /><br /> -->
+						<p class="project-overview">
+							This study, proves the effectiveness of fuzzy entropy as a feature. Future of this work
+							includes: combine the ‘fuzzy entropy vector’ with other features like SURF, SIFT, HOG, DWT
+							parameters etc., to observe any improvement of image recognition, matching, and
+							reconstruction within short process time compared to deep learning NN. Again, several MLs
+							under the ‘feature vector of fuzzy entropy’ will be combined to improve the accuracy of
+							detection and the same technique will also be used on other two multimedia data: audio and
+							video.
+						</p>
 
 					</div>
 				</div>
