--- a/project-4.html
+++ b/project-4.html
@@ -72,53 +72,45 @@
 						Disease Recognition" data-en="An Automated Approach for Fruit Leaf 
 							Disease Recognition">
 						</h3>
-						<h3 class="text-center project-color">Overview</h3>
+						<h3 class="text-center project-color">Objective</h3>
 						<p class="project-overview"><br />
-							Bangladesh is heavily reliant on agriculture as a developing nation. Cultivation of
-							Tomatoes is both economically beneficial and has great benefits health-wise. But
-							due to unawareness and not knowing about the pathogen attacks, our farmers suffer
-							greatly.
-							<span style="background-color: rgb(241, 241, 99);"> this project, an efficient way is
-								provided to identify
-								and recognize the
-								diseases that affect the cultivation of tomatoes in Bangladesh. The work was done
-								on a custom dataset.</span>
+							Bangladesh is heavily reliant on agriculture as a developing nation. Cultivation of Tomatoes
+							is both economically beneficial and has great benefits health-wise. But due to unawareness
+							and not knowing about the pathogen attacks, our farmers suffer greatly. In this project, an
+							efficient way is provided to identify and recognize the diseases that affect the cultivation
+							of tomatoes in Bangladesh. The work was done on a custom dataset.
 						</p>
+
+
+						<h3 class="text-center project-color">Methodology </h3>
+						<p class="project-overview">Here, 500 digital images of tomato leaves, including healthy and
+							unhealthy, were collected from several crop fields of villages of Bangladesh. Then the
+							images were pre-processed by resizing and normalization. Images were augmented for creating
+							the variations. For augmentation on images, several fill_mode like the reflection, wrap,
+							constant and nearest were considered. By augmentation, up to 2500 digital images were
+							created. Then, labels were assigned on those images and encoded was done after that. 30
+							features combining GLCM, statistical, and color features were extracted. By using the
+							Recursive Feature Elimination (RFE) technique, 15 best essential features were selected for
+							leaf disease classification. The dataset was split into training and testing set by 80% and
+							20% ratio. (The model was built training the dataset) Then trained the dataset under a
+							Random Forest Classifier, Support Vector Machine, and K-Nearest Neighbor algorithms. </p>
+						<img src="assets/project/pro-1-4.jpeg" alt="">
+						<img src="assets/project/pro-2-4.jpeg" alt="">
+						<h3 class="text-center project-color">Result </h3><br>
 						<p class="project-overview">
-							Here, 500 digital images of tomato leaves, including healthy and unhealthy, were collected
-							from several crop fields of villages of
-							Bangladesh. Then the images were pre-processed by resizing and normalization. Images were
-							augmented for creating the variations.
-							For augmentation on images, several fill_mode like the reflection, wrap, constant and
-							nearest were considered. By augmentation, up
-							to 2500 digital images were created. Then, labels were assigned on those images and encoded
-							was done after that. 30 features
-							combining GLCM, statistical, and color features were extracted. By using the Recursive
-							Feature Elimination (RFE) technique, 15 best
-							essential features were selected for leaf disease classification. The custom dataset was
-							split into training and testing set by 80% and
-							20% ratio. Model was trained using a Random Forest Classifier, Support Vector Machine, and
-							K-Nearest Neighbor algorithms. The
-							models performance was evaluated considering accuracy and F1 score. It was found that Random
-							Forest Classifier shows best result
-							than the other models.<br />
+							The model’s performance was evaluated considering accuracy and F1 score. It was found that
+							Random Forest Classifier shows best result than the other models.
 						</p>
-						<p class="project-overview"><br />
+						<img src="assets/project/pro-3-4.jpeg" alt="">
+						<img src="assets/project/pro-4-4.jpeg" alt=""><br /><br />
+						<p class="project-overview">
 							Integrating this system into the backend server of an application, can be used to assist
-							farmers in detecting plant diseases using leaf
-							photos. The user will take a picture of a leaf from an impacted plant with a smartphone or
-							camera that already has the suggested
+							farmers in detecting plant diseases using leaf photos. The user will take a picture of a
+							leaf from an impacted plant with a smartphone or camera that already has the suggested
 							system's application installed. Users will be able to send photos of captured leaves to the
-							proposed model on the backend server. The
-							technology will detect the ailment based on the submitted photograph and deliver its
-							findings to the user.
+							proposed model on the backend server. The technology will detect the ailment based on the
+							submitted photograph and deliver its findings to the user.
 						</p>
-						<h3 class="text-center project-color">Method </h3>
-						<img src="assets/project/project-4-1.jpg" alt="">
-						<img src="assets/project/project-4-2.jpg" alt="" style="width: 60%;">
-						<h3 class="text-center project-color">Result </h3>
-						<img src="assets/project/project-4-1.jpg" alt="">
-						<img src="assets/project/project-4-2.jpg" alt="" style="width: 60%;">
 
 					</div>
 				</div>
