--- a/project-5.html
+++ b/project-5.html
@@ -71,45 +71,28 @@
 						</h3>
 						<h3 class="text-center project-color">Overview</h3>
 						<p class="project-overview">
-							The project aims to detect traffic objects in video files using the YOLOv3(You Only Look
-							Once) model for real-time object detection.<br /><br />
+							The aim of this project was to develop a system capable of identifying and localizing
+							traffic objects such as cars, buses, and pedestrians in dynamic video environments. The
+							methodology involved reading video files frame by frame and processing each frame using the
+							pre-trained YOLOv3 model to detect objects. The OpenCV library was used for video processing
+							and visualization, enabling the display of labeled bounding boxes around detected objects in
+							real time. Additional utilities, such as imutils, facilitated video handling and frame rate
+							monitoring, while NumPy supported necessary numerical computations. The integration of these
+							tools ensured a streamlined pipeline for real-time object detection and visualization.
+						</p>
 
-							The work involves reading a video file, feeding each frame through a pre-trained YOLOv3
-							model to identify objects in each frame, and
-							visualizing the processed video with labelled bounding boxes around detected objects in
-							real-time. The framework used in this
-							project is the OpenCV library, leveraging YOLO for the deep learning-based
-							detection.<br /><br />
-
-							This project is useful in real-time video analysis where object detection is critical, such
-							as surveillance, traffic monitoring.
-						</p>
-						<p class="project-overview">
-							<strong> Framework & Toolkit:</strong>
-							<ul>
-								<li><strong> YOLO (You Only Look Once) </strong> for object detection</li>
-								<li><strong>OpenCV</strong> for video processing and visualization</li>
-								<li><strong>imutils</strong> for video handling and frame rate monitoring</li>
-								<li><strong>NumPy</strong> for numerical operations</li>
-							</ul>
-						</p>
-						<p class="project-overview">
-							<strong> Usefulness:</strong>
-							<ul>
-								<li> It demonstrates the integration of deep learning with video processing for efficient detection in dynamic environments</li>
-							</ul>
-						</p>
-						<p class="project-overview">
-							<strong> Domain Name:</strong>
-							<ul>
-								<li>  
-									This project belongs to the domain of <strong>Computer Vision</strong> and <strong>Real-Time Video Analysis</strong>.
-								</li>
-							</ul>
-						</p>
-						<h3 class="text-center project-color">Method </h3>
 						<h3 class="text-center project-color">Result </h3>
-						
+						<video controls width="320" height="240">
+							<source src="assets/project/pro-v-5-1.mp4" type="video/mp4">
+							<source src="movie.ogg" type="video/ogg">
+							Your browser does not support the video tag.
+						  </video>
+						<p class="project-overview">
+							The outcomes demonstrated the system's ability to efficiently detect and label traffic
+							objects in videos with high accuracy and responsiveness, even in dynamic and complex
+							environments. The model effectively tracked multiple objects simultaneously, providing
+							robust real-time analysis.
+						</p>
 					</div>
 				</div>
 			</div>
