--- a/project-7.html
+++ b/project-7.html
@@ -72,78 +72,36 @@
 							data-es="SecurityCat: A Simple Ultrasonic Radar System"
 							data-en="SecurityCat: A Simple Ultrasonic Radar System">
 						</h3>
-						<h3 class="text-center project-color">Overview</h3>
+						<h3 class="text-center project-color">Objective</h3>
 						<p class="project-overview">
-						<ul>
-							<li>
-								The project aims to detect whether a given image contains flowers or bugs. The YOLOv3
-								(You Only Look Once) Algorithm is used to accomplish the task. This algorithm utilizes
-								anchor boxes, which are able to detect multiple objects that can even overlap each
-								other. A non-max suppression algorithm is run on each class to avoid showing multiple
-								boxes for the same object. Three hundred images are collected, containing bugs, flowers,
-								both or none and labeled with the LabelImgtool. Then the YOLOv3 model is trained with
-								the custom dataset. The result shows that the model is able to effectively detect the
-								location of bugs and flowers in most cases. This model has shown some difficulty in
-								detecting bugs in some images. However, it effectively detects multiple overlapping
-								images, which is the case in many of the pictures found.
-							</li>
-							<li>
-								An ultrasonic sensor is attached to an Arduino microcontroller to build the
-								system. The TRIG pin is used to send sound waves, and the ECHO pin is
-								used to receive them. A servo motor is connected to the Arduino, which
-								rotates the sensor in small steps (15° to 165°) to cover a wide area. A
-								<strong>buzzer</strong> is added to the system to provide alerts when an object is close
-								to
-								less than 10cm. Arduino IDE platform is used to write the code to control
-								the servo motor, calculate distances, and activate the buzzer when an
-								object is detected within a close range. The Processing IDE is used to create
-								a radar display on the computer by writing code to visualize object
-								positions based on the sensor data.
-							</li>
-							<li>This project can be used as a security system to detect intruders.</li>
-							<li>It can be also help blind people by warning them of obstacles.</li>
-						</ul>
-						</p>
-						<h3>Equipment</h3>
-						<p class="project-overview">
-						<ul>
-							<li>Domain : Embedded Systems and IoT (Internet of Things)</li>
-							<li>Tools and Components Needed</li>
-						</ul>
-						</p>
-						<p class="project-overview">
-						<h5>1.Hardware:</h5>
-						<ul>
-							<ol>Arduino microcontroller</ol>
-							<ol>Ultrasonic sensor</ol>
-							<ol>Servo motor</ol>
-							<ol>LED and buzzer</ol>
-							<ol>Wires and a breadboard</ol>
-						</ul>
-						</p>
-						<p class="project-overview">
-						<h5>2.Software:</h5>
-						<ul>
-							<ol><strong> Arduino IDE: </strong>To program the Arduino.</ol>
-							<ol><strong> Processing IDE: </strong>To make the radar display on the computer.</ol>
-						</ul>
-						</p>
-						<p class="project-overview">
-						<ul>
-							<li> Project link online <a href="https://robu.in/arduino-radar-project-ultrasonic-based-radarconnection-and-code/"
-								target="_blank">Click</a></li>
-						</ul>
-						
+							An ultrasonic radar system was developed to detect objects at different distances and
+							angles, tell how far they are, and give auditory alerts for objects that are too close.
 						</p>
 
-						<h3 class="text-center project-color">Method </h3>
-						<img src="assets/project/project-7-1.jpg" alt="">
-						<img src="assets/project/project-7-2.jpg" alt="">
-						<img src="assets/project/project-7-3.jpg" alt="">
+						<h3 class="text-center project-color">Methodology </h3>
+						<p class="project-overview">
+							An ultrasonic sensor is attached to an Arduino microcontroller to build the system. The TRIG
+							pin is used to send sound waves, and the ECHO pin is used to receive them. A servo motor is
+							connected to the Arduino, which rotates the sensor in small steps (15° to 165°) to cover a
+							wide area. A buzzer is added to the system to provide alerts when an object is close to less
+							than 10cm. Arduino IDE platform is used to write the code to control the servo motor,
+							calculate distances, and activate the buzzer when an object is detected within a close
+							range. The Processing IDE is used to create a radar display on the computer by writing code
+							to visualize object positions based on the sensor data.
+						</p>
+						<img src="assets/project/project-7-1.jpg" alt=""><br><br>
+						<img src="assets/project/project-7-2.jpg" alt=""><br><br>
+						<img src="assets/project/project-7-3.jpg" alt=""><br><br>
 						<h3 class="text-center project-color">Result </h3>
-						<img src="assets/project/project-7-1.jpg" alt="">
-						<img src="assets/project/project-7-2.jpg" alt="">
-						<img src="assets/project/project-7-3.jpg" alt="">
+						<p class="project-overview">
+							This project can be used as a security system to detect intruders.
+							It can be also help blind people by warning them of obstacles.
+						</p>
+						<img src="assets/project/pro-1-7.jpeg" alt=""><br/><br/>
+						<img src="assets/project/pro-2-7.jpeg" alt=""><br/><br/>
+						<img src="assets/project/pro-3-7.jpeg" alt=""><br/><br/>
+						<img src="assets/project/pro-4-7.jpeg" alt=""><br/><br/>
+						<img src="assets/project/pro-5-7.jpeg" alt=""><br/><br/>
 					</div>
 				</div>
 			</div>
